--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -113,10 +113,14 @@ body {
 	background-color: $dark-main;
 	text-align      : center;
 	color           : $btn-text;
-	font-size       : 18px;
+	font-size       : 17px;
 	z-index         : 1;
 	cursor          : pointer;
 	font-weight     : bold;
+
+	&:active {
+		opacity: .7;
+	}
 
 	i {
 		line-height: 30px;
@@ -151,6 +155,10 @@ body {
 	cursor          : pointer;
 	font-weight     : bold;
 
+	&:active {
+		opacity: .7;
+	}
+
 	@media ( min-width: $screen-lg ) {
 		left       : 50%;
 		right      : 0;
@@ -166,7 +174,6 @@ body {
 	width             : 50px;
 	height            : 50px;
 	border-radius     : 25px;
-	border            : 1px solid #666;
 	background-color  : $white-main;
 	z-index           : 0;
 	-webkit-box-shadow: 0px 8px 36px -9px rgba(0,0,0,1);
@@ -189,7 +196,6 @@ body {
 	width             : 33px;
 	height            : 33px;
 	border-radius     : 16px;
-	border            : 1px solid #666;
 	background-color  : $white-main;
 	z-index           : 0;
 	-webkit-box-shadow: 0px 8px 36px -9px rgba(0,0,0,1);
@@ -216,6 +222,14 @@ body {
 		list-style: none;
 		margin    : 0;
 		padding   : 0;
+
+		@media ( min-width: $screen-sm )
+		{
+			width     : 780px;
+			margin    : 0 auto;
+			text-align: center;
+		}
+
 		li {
 			position: relative;
 			height  : 150px;
@@ -224,10 +238,12 @@ body {
 
 			@media ( min-width: $screen-sm )
 			{
-				width: 50%;
-				margin: 0 auto;
+				width   : 320px;
+				margin  : 0 auto;
 				overflow: hidden;
+				display : inline-block;
 			}
+
 			p {
 				position  : absolute;
 				bottom    : 0;
@@ -235,9 +251,10 @@ body {
 				margin    : 0;
 				padding   : 5px 0 5px 10%;
 				width     : 100%;
-				font-size : 18px;
+				font-size : 22px;
 				color     : $white-main;
 				font-style: normal;
+				text-align: left;
 				background: rgba(82,66,49,0.8);
 				background: -moz-linear-gradient(left, rgba(82,66,49,0.8) 41%, rgba(82,66,49,0.34) 75%, rgba(255,255,255,0) 100%);
 				background: -webkit-gradient(left top, right top, color-stop(41%, rgba(82,66,49,0.8)), color-stop(75%, rgba(0,0,0,0.34)), color-stop(100%, rgba(255,255,255,0)));
@@ -266,6 +283,16 @@ body {
 	&:active {
 		opacity: 1;
 	}
+}
+
+.li-overlay {
+	position        : absolute;
+	top             : 72.5%;
+	left            : 0;
+	right           : 0;
+	bottom          : 0;
+	background-color: #aec1ae;
+	opacity         : .6;
 }
 
 .svg-check {
