--- a/resources/assets/stylesheets/app.css
+++ b/resources/assets/stylesheets/app.css
@@ -8835,12 +8835,16 @@ body {
   background-color: #aec1ae;
   text-align: center;
   color: #524231;
-  font-size: 18px;
+  font-size: 17px;
   z-index: 1;
   cursor: pointer;
   font-weight: bold;
 }
 /* line 121, ../sass/app.scss */
+.reset-btn:active {
+  opacity: .7;
+}
+/* line 125, ../sass/app.scss */
 .reset-btn i {
   line-height: 30px;
 }
@@ -8851,13 +8855,13 @@ body {
     right: 0;
     margin-left: -60px;
   }
-  /* line 130, ../sass/app.scss */
+  /* line 134, ../sass/app.scss */
   .reset-btn i {
     margin-left: 1px;
   }
 }
 
-/* line 136, ../sass/app.scss */
+/* line 140, ../sass/app.scss */
 .fire-btn {
   position: fixed;
   bottom: 2%;
@@ -8876,8 +8880,12 @@ body {
   cursor: pointer;
   font-weight: bold;
 }
+/* line 158, ../sass/app.scss */
+.fire-btn:active {
+  opacity: .7;
+}
 @media (min-width: 1200px) {
-  /* line 136, ../sass/app.scss */
+  /* line 140, ../sass/app.scss */
   .fire-btn {
     left: 50%;
     right: 0;
@@ -8885,7 +8893,7 @@ body {
   }
 }
 
-/* line 161, ../sass/app.scss */
+/* line 169, ../sass/app.scss */
 .fire-btn-shadow {
   position: fixed;
   bottom: 2%;
@@ -8894,7 +8902,6 @@ body {
   width: 50px;
   height: 50px;
   border-radius: 25px;
-  border: 1px solid #666;
   background-color: #f7f7f7;
   z-index: 0;
   -webkit-box-shadow: 0px 8px 36px -9px black;
@@ -8902,7 +8909,7 @@ body {
   box-shadow: 0px 8px 36px -9px black;
 }
 @media (min-width: 1200px) {
-  /* line 161, ../sass/app.scss */
+  /* line 169, ../sass/app.scss */
   .fire-btn-shadow {
     left: 50%;
     right: 0;
@@ -8910,7 +8917,7 @@ body {
   }
 }
 
-/* line 183, ../sass/app.scss */
+/* line 190, ../sass/app.scss */
 .reset-btn-shadow {
   position: fixed;
   bottom: 2%;
@@ -8920,7 +8927,6 @@ body {
   width: 33px;
   height: 33px;
   border-radius: 16px;
-  border: 1px solid #666;
   background-color: #f7f7f7;
   z-index: 0;
   -webkit-box-shadow: 0px 8px 36px -9px black;
@@ -8928,7 +8934,7 @@ body {
   box-shadow: 0px 8px 36px -9px black;
 }
 @media (min-width: 1200px) {
-  /* line 183, ../sass/app.scss */
+  /* line 190, ../sass/app.scss */
   .reset-btn-shadow {
     left: 50%;
     right: 0;
@@ -8936,23 +8942,31 @@ body {
   }
 }
 
-/* line 206, ../sass/app.scss */
+/* line 212, ../sass/app.scss */
 .center {
   margin: 0 auto;
 }
 
-/* line 210, ../sass/app.scss */
+/* line 216, ../sass/app.scss */
 .text-center {
   text-align: center;
 }
 
-/* line 215, ../sass/app.scss */
+/* line 221, ../sass/app.scss */
 .park-nav ul {
   list-style: none;
   margin: 0;
   padding: 0;
 }
-/* line 219, ../sass/app.scss */
+@media (min-width: 768px) {
+  /* line 221, ../sass/app.scss */
+  .park-nav ul {
+    width: 780px;
+    margin: 0 auto;
+    text-align: center;
+  }
+}
+/* line 233, ../sass/app.scss */
 .park-nav ul li {
   position: relative;
   height: 150px;
@@ -8960,14 +8974,15 @@ body {
   margin: 5px 0 5px 0;
 }
 @media (min-width: 768px) {
-  /* line 219, ../sass/app.scss */
+  /* line 233, ../sass/app.scss */
   .park-nav ul li {
-    width: 50%;
+    width: 320px;
     margin: 0 auto;
     overflow: hidden;
+    display: inline-block;
   }
 }
-/* line 231, ../sass/app.scss */
+/* line 247, ../sass/app.scss */
 .park-nav ul li p {
   position: absolute;
   bottom: 0;
@@ -8975,9 +8990,10 @@ body {
   margin: 0;
   padding: 5px 0 5px 10%;
   width: 100%;
-  font-size: 18px;
+  font-size: 22px;
   color: #f7f7f7;
   font-style: normal;
+  text-align: left;
   background: rgba(82, 66, 49, 0.8);
   background: -moz-linear-gradient(left, rgba(82, 66, 49, 0.8) 41%, rgba(82, 66, 49, 0.34) 75%, rgba(255, 255, 255, 0) 100%);
   background: -webkit-gradient(left top, right top, color-stop(41%, rgba(82, 66, 49, 0.8)), color-stop(75%, rgba(0, 0, 0, 0.34)), color-stop(100%, rgba(255, 255, 255, 0)));
@@ -8992,7 +9008,7 @@ body {
   -o-transition: all 0.2s ease-out;
   transition: all 0.2s ease-out;
 }
-/* line 252, ../sass/app.scss */
+/* line 269, ../sass/app.scss */
 .park-nav ul li:hover p {
   -webkit-transform: translate(-5px, 0px);
   -moz-transform: translate(-5px, 0px);
@@ -9001,7 +9017,7 @@ body {
   transform: translate(-5px, 0px);
 }
 
-/* line 260, ../sass/app.scss */
+/* line 277, ../sass/app.scss */
 .li-bg {
   -webkit-transition: all 0.2s ease-in-out;
   -moz-transition: all 0.2s ease-in-out;
@@ -9010,16 +9026,27 @@ body {
   transition: all 0.2s ease-in-out;
   opacity: .9;
 }
-/* line 263, ../sass/app.scss */
+/* line 280, ../sass/app.scss */
 .li-bg:hover {
   cursor: pointer;
 }
-/* line 266, ../sass/app.scss */
+/* line 283, ../sass/app.scss */
 .li-bg:active {
   opacity: 1;
 }
 
-/* line 271, ../sass/app.scss */
+/* line 288, ../sass/app.scss */
+.li-overlay {
+  position: absolute;
+  top: 72.5%;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #aec1ae;
+  opacity: .6;
+}
+
+/* line 298, ../sass/app.scss */
 .svg-check {
   display: none;
   position: absolute;
@@ -9031,7 +9058,7 @@ body {
   height: 40px;
 }
 
-/* line 282, ../sass/app.scss */
+/* line 309, ../sass/app.scss */
 footer {
   color: #aec1ae;
   font-size: 10px;
@@ -9039,7 +9066,7 @@ footer {
 }
 
 /* ANIMATION SPECIFIC */
-/* line 294, ../sass/app.scss */
+/* line 321, ../sass/app.scss */
 .zoom-check {
   -webkit-animation: zoomAni 0.5s forwards;
   -moz-animation: zoomAni 0.5s forwards;
@@ -9048,7 +9075,7 @@ footer {
   animation: zoomAni 0.5s forwards;
 }
 
-/* line 298, ../sass/app.scss */
+/* line 325, ../sass/app.scss */
 .zoom-check-reverse {
   -webkit-animation: zoomAniRev 0.5s forwards;
   -moz-animation: zoomAniRev 0.5s forwards;
@@ -9057,7 +9084,7 @@ footer {
   animation: zoomAniRev 0.5s forwards;
 }
 
-/* line 302, ../sass/app.scss */
+/* line 329, ../sass/app.scss */
 .zoom-check-shadow {
   -webkit-animation: zoomAniRevShadow 0.5s forwards;
   -moz-animation: zoomAniRevShadow 0.5s forwards;
@@ -9066,7 +9093,7 @@ footer {
   animation: zoomAniRevShadow 0.5s forwards;
 }
 
-/* line 306, ../sass/app.scss */
+/* line 333, ../sass/app.scss */
 .zoom-check-shadow-reverse {
   -webkit-animation: zoomAniRevShadowRev 0.5s forwards;
   -moz-animation: zoomAniRevShadowRev 0.5s forwards;
@@ -9075,7 +9102,7 @@ footer {
   animation: zoomAniRevShadowRev 0.5s forwards;
 }
 
-/* line 310, ../sass/app.scss */
+/* line 337, ../sass/app.scss */
 .slide-center {
   -webkit-animation: slideAni 0.5s forwards;
   -moz-animation: slideAni 0.5s forwards;
