--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -92,6 +92,11 @@ body {
 	background         :  url(../../../public/images/allparks.jpg) no-repeat left center;
 	background-size    : 100%;
 	background-position: center;
+
+	@media ( min-width: $screen-sm ) {
+		width: 640px;
+		background-position-y: -200px; /* to show trees in image */
+	}
 }
 
 
@@ -99,6 +104,19 @@ body {
 /* GENERAL CLASSES */
 
 
+
+.title {
+	letter-spacing: 10px;
+}
+
+.sub-title {
+	letter-spacing: 3px;
+}
+
+.description {
+	font-size: 16px;
+	padding  : 0 10px;
+}
 
 .reset-btn {
 	position        : fixed;
@@ -119,7 +137,7 @@ body {
 	font-weight     : bold;
 
 	&:active {
-		opacity: .7;
+		opacity: .8;
 	}
 
 	i {
@@ -156,7 +174,7 @@ body {
 	font-weight     : bold;
 
 	&:active {
-		opacity: .7;
+		opacity: .8;
 	}
 
 	@media ( min-width: $screen-lg ) {
@@ -225,7 +243,7 @@ body {
 
 		@media ( min-width: $screen-sm )
 		{
-			width     : 780px;
+			width     : 640px;
 			margin    : 0 auto;
 			text-align: center;
 		}
@@ -238,7 +256,7 @@ body {
 
 			@media ( min-width: $screen-sm )
 			{
-				width   : 320px;
+				width   : 318px; /*account for padding*/
 				margin  : 0 auto;
 				overflow: hidden;
 				display : inline-block;
