--- a/resources/assets/stylesheets/app.css
+++ b/resources/assets/stylesheets/app.css
@@ -8819,9 +8819,33 @@ body {
   background-size: 100%;
   background-position: center;
 }
+@media (min-width: 768px) {
+  /* line 91, ../sass/app.scss */
+  #find-all {
+    width: 640px;
+    background-position-y: -200px;
+    /* to show trees in image */
+  }
+}
 
 /* GENERAL CLASSES */
-/* line 103, ../sass/app.scss */
+/* line 108, ../sass/app.scss */
+.title {
+  letter-spacing: 10px;
+}
+
+/* line 112, ../sass/app.scss */
+.sub-title {
+  letter-spacing: 3px;
+}
+
+/* line 116, ../sass/app.scss */
+.description {
+  font-size: 16px;
+  padding: 0 10px;
+}
+
+/* line 121, ../sass/app.scss */
 .reset-btn {
   position: fixed;
   bottom: 2%;
@@ -8840,28 +8864,28 @@ body {
   cursor: pointer;
   font-weight: bold;
 }
-/* line 121, ../sass/app.scss */
+/* line 139, ../sass/app.scss */
 .reset-btn:active {
-  opacity: .7;
+  opacity: .8;
 }
-/* line 125, ../sass/app.scss */
+/* line 143, ../sass/app.scss */
 .reset-btn i {
   line-height: 30px;
 }
 @media (min-width: 1200px) {
-  /* line 103, ../sass/app.scss */
+  /* line 121, ../sass/app.scss */
   .reset-btn {
     left: 50%;
     right: 0;
     margin-left: -60px;
   }
-  /* line 134, ../sass/app.scss */
+  /* line 152, ../sass/app.scss */
   .reset-btn i {
     margin-left: 1px;
   }
 }
 
-/* line 140, ../sass/app.scss */
+/* line 158, ../sass/app.scss */
 .fire-btn {
   position: fixed;
   bottom: 2%;
@@ -8880,12 +8904,12 @@ body {
   cursor: pointer;
   font-weight: bold;
 }
-/* line 158, ../sass/app.scss */
+/* line 176, ../sass/app.scss */
 .fire-btn:active {
-  opacity: .7;
+  opacity: .8;
 }
 @media (min-width: 1200px) {
-  /* line 140, ../sass/app.scss */
+  /* line 158, ../sass/app.scss */
   .fire-btn {
     left: 50%;
     right: 0;
@@ -8893,7 +8917,7 @@ body {
   }
 }
 
-/* line 169, ../sass/app.scss */
+/* line 187, ../sass/app.scss */
 .fire-btn-shadow {
   position: fixed;
   bottom: 2%;
@@ -8909,7 +8933,7 @@ body {
   box-shadow: 0px 8px 36px -9px black;
 }
 @media (min-width: 1200px) {
-  /* line 169, ../sass/app.scss */
+  /* line 187, ../sass/app.scss */
   .fire-btn-shadow {
     left: 50%;
     right: 0;
@@ -8917,7 +8941,7 @@ body {
   }
 }
 
-/* line 190, ../sass/app.scss */
+/* line 208, ../sass/app.scss */
 .reset-btn-shadow {
   position: fixed;
   bottom: 2%;
@@ -8934,7 +8958,7 @@ body {
   box-shadow: 0px 8px 36px -9px black;
 }
 @media (min-width: 1200px) {
-  /* line 190, ../sass/app.scss */
+  /* line 208, ../sass/app.scss */
   .reset-btn-shadow {
     left: 50%;
     right: 0;
@@ -8942,31 +8966,31 @@ body {
   }
 }
 
-/* line 212, ../sass/app.scss */
+/* line 230, ../sass/app.scss */
 .center {
   margin: 0 auto;
 }
 
-/* line 216, ../sass/app.scss */
+/* line 234, ../sass/app.scss */
 .text-center {
   text-align: center;
 }
 
-/* line 221, ../sass/app.scss */
+/* line 239, ../sass/app.scss */
 .park-nav ul {
   list-style: none;
   margin: 0;
   padding: 0;
 }
 @media (min-width: 768px) {
-  /* line 221, ../sass/app.scss */
+  /* line 239, ../sass/app.scss */
   .park-nav ul {
-    width: 780px;
+    width: 640px;
     margin: 0 auto;
     text-align: center;
   }
 }
-/* line 233, ../sass/app.scss */
+/* line 251, ../sass/app.scss */
 .park-nav ul li {
   position: relative;
   height: 150px;
@@ -8974,15 +8998,16 @@ body {
   margin: 5px 0 5px 0;
 }
 @media (min-width: 768px) {
-  /* line 233, ../sass/app.scss */
+  /* line 251, ../sass/app.scss */
   .park-nav ul li {
-    width: 320px;
+    width: 318px;
+    /*account for padding*/
     margin: 0 auto;
     overflow: hidden;
     display: inline-block;
   }
 }
-/* line 247, ../sass/app.scss */
+/* line 265, ../sass/app.scss */
 .park-nav ul li p {
   position: absolute;
   bottom: 0;
@@ -9008,7 +9033,7 @@ body {
   -o-transition: all 0.2s ease-out;
   transition: all 0.2s ease-out;
 }
-/* line 269, ../sass/app.scss */
+/* line 287, ../sass/app.scss */
 .park-nav ul li:hover p {
   -webkit-transform: translate(-5px, 0px);
   -moz-transform: translate(-5px, 0px);
@@ -9017,7 +9042,7 @@ body {
   transform: translate(-5px, 0px);
 }
 
-/* line 277, ../sass/app.scss */
+/* line 295, ../sass/app.scss */
 .li-bg {
   -webkit-transition: all 0.2s ease-in-out;
   -moz-transition: all 0.2s ease-in-out;
@@ -9026,16 +9051,16 @@ body {
   transition: all 0.2s ease-in-out;
   opacity: .9;
 }
-/* line 280, ../sass/app.scss */
+/* line 298, ../sass/app.scss */
 .li-bg:hover {
   cursor: pointer;
 }
-/* line 283, ../sass/app.scss */
+/* line 301, ../sass/app.scss */
 .li-bg:active {
   opacity: 1;
 }
 
-/* line 288, ../sass/app.scss */
+/* line 306, ../sass/app.scss */
 .li-overlay {
   position: absolute;
   top: 72.5%;
@@ -9046,7 +9071,7 @@ body {
   opacity: .6;
 }
 
-/* line 298, ../sass/app.scss */
+/* line 316, ../sass/app.scss */
 .li-overlay-white {
   position: absolute;
   top: 69%;
@@ -9056,7 +9081,7 @@ body {
   background-color: #fff;
 }
 
-/* line 307, ../sass/app.scss */
+/* line 325, ../sass/app.scss */
 .svg-check {
   display: none;
   position: absolute;
@@ -9068,7 +9093,7 @@ body {
   height: 40px;
 }
 
-/* line 318, ../sass/app.scss */
+/* line 336, ../sass/app.scss */
 footer {
   color: #aec1ae;
   font-size: 10px;
@@ -9076,7 +9101,7 @@ footer {
 }
 
 /* ANIMATION SPECIFIC */
-/* line 330, ../sass/app.scss */
+/* line 348, ../sass/app.scss */
 .zoom-check {
   -webkit-animation: zoomAni 0.5s forwards;
   -moz-animation: zoomAni 0.5s forwards;
@@ -9085,7 +9110,7 @@ footer {
   animation: zoomAni 0.5s forwards;
 }
 
-/* line 334, ../sass/app.scss */
+/* line 352, ../sass/app.scss */
 .zoom-check-reverse {
   -webkit-animation: zoomAniRev 0.5s forwards;
   -moz-animation: zoomAniRev 0.5s forwards;
@@ -9094,7 +9119,7 @@ footer {
   animation: zoomAniRev 0.5s forwards;
 }
 
-/* line 338, ../sass/app.scss */
+/* line 356, ../sass/app.scss */
 .zoom-check-shadow {
   -webkit-animation: zoomAniRevShadow 0.5s forwards;
   -moz-animation: zoomAniRevShadow 0.5s forwards;
@@ -9103,7 +9128,7 @@ footer {
   animation: zoomAniRevShadow 0.5s forwards;
 }
 
-/* line 342, ../sass/app.scss */
+/* line 360, ../sass/app.scss */
 .zoom-check-shadow-reverse {
   -webkit-animation: zoomAniRevShadowRev 0.5s forwards;
   -moz-animation: zoomAniRevShadowRev 0.5s forwards;
@@ -9112,7 +9137,7 @@ footer {
   animation: zoomAniRevShadowRev 0.5s forwards;
 }
 
-/* line 346, ../sass/app.scss */
+/* line 364, ../sass/app.scss */
 .slide-center {
   -webkit-animation: slideAni 0.5s forwards;
   -moz-animation: slideAni 0.5s forwards;
